# src/model/task.go
@@ -2,9 +2,13 @@ package model
 
 import "gorm.io/gorm"
 
-
 type Task struct {
 	gorm.Model
-	Name string	
+	Name        string
 	Description string
+}
+
+type TaskRequest struct {
+	Name        string `json:"name" example:"task name"`
+	Description string `json:"description" example:"task description"`
 }
